login and register

--- a/templates/desktop_template.html
+++ b/templates/desktop_template.html
@@ -8,7 +8,7 @@
             </a>
             <img onclick="logOut()" class="avatar" src="../img/avatar.png">
             <div id="logOut" class="logOut d-none">
-                <a href="../index.html"> Log out </a>
+                <a href="../index.html" onclick="removeToken()"> Log out </a>
             </div>
         </div>
     </div>
